Enum PostType {
  Message
  Exchange
}

Table Post {
  Id varchar(24) [pk]

  Title varchar(50) [not null]
  Author Author
  Type PostType [not null]
  ExchangeDetails ExchangeDetails
  ThumbUrl varchar(500)
  IsArchived boolean
}

Table PostReply {
  Id varchar(24) [pk]
  PostId varchar(24) [ref: > Post.Id, not null]
  ParentId varchar(24) [ref: > PostReply.Id]
  
  Message varchar(5000) [not null]
  Author Author
}

Table PostDetail {
  Id varchar(24) [pk]
  PostId varchar(24) [ref: - Post.Id, not null]

  Description varchar(5000)
  ImageUploadApiData ImageUploadApiData[]
}

Table Users {
  Id varchar(24) [pk]

  UserName varchar(50)
  InviteCode varchar(100)
}

Table Profile {
  Id varchar(24) [pk]
  UserId varchar(24) [ref: - Users.Id]
  
  BookmarkIds string[]
  WatchIds string[]
  NotificationSubscriptions NotificationSubscription[]
}

Table Invite {
  Id varchar(24) [pk]

  Code varchar(100) [ref: - Users.InviteCode]
  Username varchar(50) [ref: - Users.UserName]
}